cbits/Bullet.h

void btRigidBody_updateDeactivation(void *c,float p0); //method: updateDeactivation void ( ::btRigidBody::* )( ::btScalar ) 
void btRigidBody_setAngularFactor(void *c,float* p0); //method: setAngularFactor void ( ::btRigidBody::* )( ::btVector3 const & ) 
void btRigidBody_setAngularFactor0(void *c,float* p0); //method: setAngularFactor void ( ::btRigidBody::* )( ::btVector3 const & ) 
void btRigidBody_setAngularFactor1(void *c,float p0); //method: setAngularFactor void ( ::btRigidBody::* )( ::btScalar ) 
void btRigidBody_internalWritebackVelocity(void *c); //method: internalWritebackVelocity void ( ::btRigidBody::* )(  ) 
void btRigidBody_internalWritebackVelocity0(void *c); //method: internalWritebackVelocity void ( ::btRigidBody::* )(  ) 
void btRigidBody_internalWritebackVelocity1(void *c,float p0); //method: internalWritebackVelocity void ( ::btRigidBody::* )( ::btScalar ) 
void btRigidBody_getPushVelocity(void *c,float* ret); //method: getPushVelocity ::btVector3 const & ( ::btRigidBody::* )(  ) const
void btRigidBody_internalGetDeltaAngularVelocity(void *c,float* ret); //method: internalGetDeltaAngularVelocity ::btVector3 & ( ::btRigidBody::* )(  ) 
void btRigidBody_applyGravity(void *c); //method: applyGravity void ( ::btRigidBody::* )(  ) 
char const * btRigidBody_serialize(void *c,void* p0,void* p1); //method: serialize char const * ( ::btRigidBody::* )( void *,::btSerializer * ) const
void btRigidBody_getOrientation(void *c,float* ret); //method: getOrientation ::btQuaternion ( ::btRigidBody::* )(  ) const
void btRigidBody_applyCentralForce(void *c,float* p0); //method: applyCentralForce void ( ::btRigidBody::* )( ::btVector3 const & ) 
//not supported method: internalApplyImpulse void ( ::btRigidBody::* )( ::btVector3 const &,::btVector3 const &,::btScalar const ) 
// error: ::btVector3 const & - ok, ::btVector3 const & - ok,  - unsupported, void - ok

void btRigidBody_setMotionState(void *c,void* p0); //method: setMotionState void ( ::btRigidBody::* )( ::btMotionState * ) 
void btRigidBody_clearForces(void *c); //method: clearForces void ( ::btRigidBody::* )(  ) 
void* btRigidBody_getMotionState(void *c); //method: getMotionState ::btMotionState * ( ::btRigidBody::* )(  ) 
void* btRigidBody_getMotionState0(void *c); //method: getMotionState ::btMotionState * ( ::btRigidBody::* )(  ) 
void* btRigidBody_getMotionState1(void *c); //method: getMotionState ::btMotionState const * ( ::btRigidBody::* )(  ) const
void btRigidBody_setDamping(void *c,float p0,float p1); //method: setDamping void ( ::btRigidBody::* )( ::btScalar,::btScalar ) 
void btRigidBody_applyImpulse(void *c,float* p0,float* p1); //method: applyImpulse void ( ::btRigidBody::* )( ::btVector3 const &,::btVector3 const & ) 
void btRigidBody_applyTorque(void *c,float* p0); //method: applyTorque void ( ::btRigidBody::* )( ::btVector3 const & ) 
void btRigidBody_internalApplyPushImpulse(void *c,float* p0,float* p1,float p2); //method: internalApplyPushImpulse void ( ::btRigidBody::* )( ::btVector3 const &,::btVector3 const &,::btScalar ) 
int btRigidBody_wantsSleeping(void *c); //method: wantsSleeping bool ( ::btRigidBody::* )(  ) 