Physics/Bullet/Raw/BulletDynamics/Dynamics.chs

{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#405>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_updateDeactivation as btRigidBody_updateDeactivation    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ timeStep
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#477>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_setAngularFactor0 as btRigidBody_setAngularFactor    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ angFac
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#477>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_setAngularFactor0 as btRigidBody_setAngularFactor'    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ angFac
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#477>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_setAngularFactor0 as btRigidBody_setAngularFactor0    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ angFac
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#477>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_setAngularFactor0 as btRigidBody_setAngularFactor0'    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ angFac
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#482>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_setAngularFactor1 as btRigidBody_setAngularFactor1    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ angFac
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#606>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_internalWritebackVelocity0 as btRigidBody_internalWritebackVelocity    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#606>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_internalWritebackVelocity0 as btRigidBody_internalWritebackVelocity0    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#619>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_internalWritebackVelocity1 as btRigidBody_internalWritebackVelocity1    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ timeStep
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#532>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getPushVelocity as btRigidBody_getPushVelocity    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#551>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_internalGetDeltaAngularVelocity as btRigidBody_internalGetDeltaAngularVelocity    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#207>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_applyGravity as btRigidBody_applyGravity    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#628>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_serialize as btRigidBody_serialize    `( BtRigidBodyClass bc , BtSerializerClass p1 )' =>     { withBt* `bc'  -- ^ 
, withVoidPtr* `VoidPtr'  -- ^ dataBuffer
, withBt* `p1'  -- ^ serializer
 } ->  `String'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#343>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getOrientation as btRigidBody_getOrientation    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaUnitQuaternion-  `UnitQuaternion'  peekUnitQuaternion* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#268>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_applyCentralForce as btRigidBody_applyCentralForce    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ force
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#268>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_applyCentralForce as btRigidBody_applyCentralForce'    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ force
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#466>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_setMotionState as btRigidBody_setMotionState    `( BtRigidBodyClass bc , BtMotionStateClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ motionState
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#332>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_clearForces as btRigidBody_clearForces    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#458>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getMotionState0 as btRigidBody_getMotionState    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtMotionState'  mkBtMotionState* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#458>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getMotionState0 as btRigidBody_getMotionState0    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtMotionState'  mkBtMotionState* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#462>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getMotionState1 as btRigidBody_getMotionState1    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtMotionState'  mkBtMotionState* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#216>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_setDamping as btRigidBody_setDamping    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ lin_damping
,  `Float'  -- ^ ang_damping
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#320>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_applyImpulse as btRigidBody_applyImpulse    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ impulse
, withVec3* `Vec3'  peekVec3* -- ^ rel_pos
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#320>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_applyImpulse as btRigidBody_applyImpulse'    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ impulse
, allocaVec3-  `Vec3'  peekVec3* -- ^ rel_pos
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#299>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_applyTorque as btRigidBody_applyTorque    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ torque
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#299>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_applyTorque as btRigidBody_applyTorque'    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ torque
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#597>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_internalApplyPushImpulse as btRigidBody_internalApplyPushImpulse    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ linearComponent
, withVec3* `Vec3'  peekVec3* -- ^ angularComponent
,  `Float'  -- ^ impulseMagnitude
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#597>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_internalApplyPushImpulse as btRigidBody_internalApplyPushImpulse'    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ linearComponent
, allocaVec3-  `Vec3'  peekVec3* -- ^ angularComponent
,  `Float'  -- ^ impulseMagnitude
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#422>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_wantsSleeping as btRigidBody_wantsSleeping    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
